Changed grunt flow

--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
     "name": "your-next-website",
     "version": "0.0.1",
-    "dependencies": {
+    "devDependencies": {
         "bootstrap-sass": "3.3.3"
     }
 }
